<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.macrealstudios.practiceset2.MainActivity">

    <LinearLayout
        android:id="@+id/score_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout style="@style/tableLayout">

            <TextView
                style="@style/team_title_style"
                android:text="@string/team_rocket_title" />

            <TextView
                android:id="@+id/team_rocket_score"
                style="@style/score_style"
                android:text="@string/team_rocket_score_text" />

            <Button
                style="@style/point_btn_style"
                android:fontFamily="@font/montserrat"
                android:onClick="addOneForRocket"
                android:text="@string/add_one_text" />

            <Button
                style="@style/point_btn_style"
                android:onClick="minusFiveForRocket"
                android:text="@string/minus_five_text" />

            <Button
                style="@style/point_btn_style"
                android:fontFamily="@font/montserrat"
                android:onClick="addOneForRocket"
                android:text="@string/add_one_text" />

        </LinearLayout>


        <LinearLayout style="@style/tableLayout">

            <TextView
                style="@style/team_title_style"
                android:text="@string/team_spurs_title" />

            <TextView
                android:id="@+id/team_spur_score"
                style="@style/score_style"
                android:text="@string/team_spurs_score_text" />

            <Button
                style="@style/point_btn_style"
                android:fontFamily="@font/montserrat"
                android:onClick="addOneForSpurs"
                android:text="@string/add_one_text" />

            <Button
                style="@style/point_btn_style"
                android:fontFamily="@font/montserrat"
                android:onClick="minusFiveForSpurs"
                android:text="@string/minus_five_text" />

            <Button
                style="@style/point_btn_style"
                android:fontFamily="@font/montserrat"
                android:onClick="addOneForSpurs"
                android:text="@string/freeThrowText" />

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:onClick="tapReset"
        android:text="@string/clear_text"
        android:textSize="18sp" />
</RelativeLayout>